--- a/app/src/main/res/layout/propertyedit.xml
+++ b/app/src/main/res/layout/propertyedit.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layoutPropEdit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -33,7 +34,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@+id/txtStringVal"
-            android:text="" />
+            android:text=""
+            tools:ignore="LabelFor" />
 
         <AutoCompleteTextView
             android:id="@id/txtStringVal"
