--- a/app/src/main/res/layout-land/flightquery.xml
+++ b/app/src/main/res/layout-land/flightquery.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/fqGeneralText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
                 android:hint="@string/fqTextContainsPrompt" />
         </LinearLayout>
 
@@ -420,6 +421,7 @@
                 android:id="@+id/fqModelName"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
                 android:hint="@string/fqFlightModelNamePrompt" />
         </LinearLayout>
 
