Clean up lots of lint warnings, primarily around:  - redundant initializers  - tighter access (e.g., public->private)  - updated copyright on touched files  - Upgraded build version to SDK 27

--- a/app/src/main/res/layout/currency.xml
+++ b/app/src/main/res/layout/currency.xml
@@ -15,6 +15,7 @@
             android:layout_margin="4dp"
             android:background="@color/table_background"
             android:clickable="true"
+            android:focusable="true"
             android:gravity="center"
             android:padding="5dip"
             android:text="@string/CurrencyDisclaimer"
