--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
     <external-path name="my_images" path="Android/data/com.myflightbook.android/files/Pictures" />
+    <external-path name="my_docs" path="Android/data/com.myflightbook.android/files/Documents" />
 </paths>
