--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -8,6 +8,7 @@
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/ic_action_search_dark"
         android:hint="@string/strEmpty"
+        android:inputType="text"
         android:id="@+id/txtSearchProp"
         />
 
