Issue #73 and Issue #45  - Support for new "NoDate" status on currency  - Support for new CurrencyStatusItem fields AssociatedResourceID, CurrencyGroup, and Query.  - Make most currency items clickable based on AssociatedResourceID/CurrencyGroup/Query.  This includes deadlines (issue #45), so that's good enough IMO to call deadlines done.  - Reworked layout of currency row a bit to make it look better.

--- a/app/src/main/res/layout/currencyrow.xml
+++ b/app/src/main/res/layout/currencyrow.xml
@@ -8,14 +8,13 @@
         android:id="@+id/txtCsiAttribute"
         android:layout_width="0px"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
         android:text=""
-        android:textSize="8pt" />
+        android:textStyle="bold"
+        android:textSize="6pt" />
 
     <LinearLayout
         android:layout_width="0px"
         android:layout_height="wrap_content"
-        android:layout_weight="5"
         android:orientation="vertical">
 
         <TextView
