--- a/app/src/main/res/layout-land/newflight.xml
+++ b/app/src/main/res/layout-land/newflight.xml
@@ -47,33 +47,17 @@
             android:orientation="vertical"
             android:padding="5dp">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <EditText
-                    android:id="@+id/txtComments"
-                    android:layout_width="0sp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.8"
-                    android:hint="@string/lblComments"
-                    android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
-                    android:minLines="2"
-                    android:nextFocusDown="@+id/txtRoute"
-                    android:nextFocusUp="@+id/spnAircraft"
-                    android:text="" />
-
-                <ImageButton
-                    android:id="@+id/btnAddApproach"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/lblAddApproaches"
-                    android:padding="2dp"
-                    android:src="@drawable/ic_action_new_light"
-                    android:text="" />
-            </LinearLayout>
+            <EditText
+                android:id="@+id/txtComments"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.8"
+                android:hint="@string/lblComments"
+                android:inputType="text|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
+                android:minLines="2"
+                android:nextFocusDown="@+id/txtRoute"
+                android:nextFocusUp="@+id/spnAircraft"
+                android:text="" />
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -215,12 +199,21 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="top"
                     android:width="90dip"
-                    android:nextFocusDown="@+id/txtLandings"
                     mfb:EditMode="INTEGER">
 
                     <requestFocus />
                 </Model.DecimalEdit>
             </LinearLayout>
+
+            <ImageButton
+                android:id="@+id/btnAddApproach"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/lblAddApproaches"
+                android:padding="2dp"
+                android:src="@drawable/ic_action_new_light"
+                android:layout_gravity="bottom"
+                android:text="" />
 
             <CheckBox
                 android:id="@+id/ckHold"
@@ -228,6 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:text="@string/lblHold" />
+
         </LinearLayout>
 
         <!-- In the Cockpit -->
