--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/custom_theme_color" />
+    <item android:drawable="@color/splash_background" />
     <item>
         <bitmap android:src="@mipmap/ic_launcher" android:gravity="center" />
     </item>
