--- a/app/src/main/res/drawable/splash_background.xml
+++ b/app/src/main/res/drawable/splash_background.xml
@@ -2,6 +2,6 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/splash_background" />
     <item>
-        <bitmap android:src="@mipmap/ic_launcher" android:gravity="center" />
+        <bitmap android:src="@mipmap/splash" android:gravity="center" />
     </item>
 </layer-list>
