--- a/app/src/main/res/layout/expandablelist.xml
+++ b/app/src/main/res/layout/expandablelist.xml
@@ -12,9 +12,14 @@
         android:id="@+id/txtSearchProp"
         />
 
-    <ExpandableListView
-        android:id="@id/android:list"
-        android:descendantFocusability="afterDescendants"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ExpandableListView
+            android:id="@id/android:list"
+            android:descendantFocusability="afterDescendants"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
