--- a/app/src/main/res/layout/totalslist.xml
+++ b/app/src/main/res/layout/totalslist.xml
@@ -11,9 +11,15 @@
         android:gravity="center_horizontal"
         android:padding="2sp" />
 
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/table_background" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@android:id/list"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/table_background" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
