--- a/app/src/main/res/layout/recentsws.xml
+++ b/app/src/main/res/layout/recentsws.xml
@@ -11,8 +11,13 @@
         android:gravity="center_horizontal"
         android:padding="2sp" />
 
-    <ListView
-        android:id="@id/android:list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefresh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ListView
+            android:id="@id/android:list"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
