Migrate to v7 AppCompatActivity.  Enables new theming, day/night mode.  Also just makes things a bit more modern...  - set datePickerMode and timePickerMode in datepicker.xml to be spinners (otherwise, doesn't fit on screen)  - finally address the "showAsAction" warning  - Set theme to Theme.AppCompat.DayNight.DarkActionBar (to enable day/night mode...)

--- a/app/src/main/res/menu/aircraftmenu.xml
+++ b/app/src/main/res/menu/aircraftmenu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuRefreshAircraft"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="ifRoom"
         android:title="@string/menuRefreshAircraft"
-        android:titleCondensed="@string/menuRefreshAircraftShort" />
+        android:titleCondensed="@string/menuRefreshAircraftShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuNewAircraft"
         android:icon="@drawable/ic_action_new"
-        android:showAsAction="withText|always"
         android:title="@string/menuAddAircraft"
-        android:titleCondensed="@string/menuAddAircraftShort" />
+        android:titleCondensed="@string/menuAddAircraftShort"
+        app:showAsAction="withText|always" />
 </menu>
