--- a/app/src/main/res/menu/mfbnewflightmenu.xml
+++ b/app/src/main/res/menu/mfbnewflightmenu.xml
@@ -1,33 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/btnSubmitFlight"
-        android:showAsAction="ifRoom"
         android:title="@string/menuAddFlight"
-        android:titleCondensed="@string/menuAddFlightShort" />
+        android:titleCondensed="@string/menuAddFlightShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuUploadLater"
-        android:showAsAction="never"
         android:title="@string/menuAddFlightLater"
-        android:titleCondensed="@string/menuAddFlightLaterShort" />
+        android:titleCondensed="@string/menuAddFlightLaterShort"
+        app:showAsAction="never" />
     <item
         android:id="@+id/menuTakePicture"
         android:icon="@drawable/ic_action_camera"
-        android:showAsAction="ifRoom"
         android:title="@string/menuTakePicture"
-        android:titleCondensed="@string/menuTakePictureShort" />
+        android:titleCondensed="@string/menuTakePictureShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuTakeVideo"
         android:icon="@drawable/ic_action_video"
-        android:showAsAction="ifRoom"
         android:title="@string/menuTakeVideo"
-        android:titleCondensed="@string/menuTakeVideoShort" />
+        android:titleCondensed="@string/menuTakeVideoShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuChoosePicture"
         android:icon="@drawable/ic_action_picture"
-        android:showAsAction="ifRoom"
         android:title="@string/menuChoosePicture"
-        android:titleCondensed="@string/menuChoosePictureShort" />
+        android:titleCondensed="@string/menuChoosePictureShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuResetFlight"
         android:title="@string/menuResetFlight"
