--- a/app/src/main/res/menu/propertylistmenu.xml
+++ b/app/src/main/res/menu/propertylistmenu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuRefreshProperties"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="ifRoom"
         android:title="@string/menuRefresh"
-        android:titleCondensed="@string/menuRefresh" />
+        android:titleCondensed="@string/menuRefresh"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuBackToFlight"
         android:title="@string/menuReturnToFlight"
