--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -10,10 +10,12 @@
         android:id="@+id/datePicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:datePickerMode="spinner"
         android:calendarViewShown="false" />
 
     <TimePicker
         android:id="@+id/timePicker"
+        android:timePickerMode="spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
