--- a/app/src/main/res/menu/currencymenu.xml
+++ b/app/src/main/res/menu/currencymenu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuRefresh"
         android:icon="@drawable/ic_action_refresh"
-        android:showAsAction="ifRoom"
-        android:title="@string/menuRefresh" />
+        android:title="@string/menuRefresh"
+        app:showAsAction="ifRoom" />
 </menu>
