--- a/app/src/main/res/menu/flightquerymenu.xml
+++ b/app/src/main/res/menu/flightquerymenu.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuResetFlight"
-        android:showAsAction="ifRoom"
         android:title="@string/menuResetFlight"
-        android:titleCondensed="@string/menuResetFlightShort" />
+        android:titleCondensed="@string/menuResetFlightShort"
+        app:showAsAction="ifRoom" />
 </menu>
