--- a/app/src/main/res/menu/optionsmenu.xml
+++ b/app/src/main/res/menu/optionsmenu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menuContact"
-        android:showAsAction="ifRoom"
         android:title="@string/menuContact"
-        android:titleCondensed="@string/menuContactShort" />
+        android:titleCondensed="@string/menuContactShort"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/menuFacebook"
         android:title="@string/menuFollowFB"
