--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -36,7 +36,7 @@
         <item name="android:textAlignment">center</item>
         <item name="android:background">@drawable/roundedborder</item>
     </style>
-    <style name="SplashTheme" parent="@android:style/Theme.Holo.Light.NoActionBar" >
+    <style name="SplashTheme" parent="Theme.AppCompat.DayNight.DarkActionBar" >
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 </resources>
