Partial fix to issue #133 (dialog box theming).  Day/night theming and overall cleanup for the 3 dialogs in the system.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#4C6470</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="colorBackground">#000000</color>
+    <color name="colorDialog">#656565</color>
+    <color name="colorMenu">#656565</color>
 </resources>
