--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -20,7 +20,6 @@
         android:layout_height="wrap_content" />
 
     <LinearLayout
-        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal">
@@ -28,6 +27,7 @@
         <Button
             android:id="@+id/btnDateNone"
             style="?android:attr/buttonBarButtonStyle"
+            android:layout_weight="0.3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lblNone" />
@@ -35,6 +35,7 @@
         <Button
             android:id="@+id/btnDateNow"
             style="?android:attr/buttonBarButtonStyle"
+            android:layout_weight="0.3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lblNow" />
@@ -42,6 +43,7 @@
         <Button
             android:id="@+id/btnOK"
             style="?android:attr/buttonBarButtonStyle"
+            android:layout_weight="0.3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/lblOK" />
