--- a/app/src/main/res/layout/dlgaddcomment.xml
+++ b/app/src/main/res/layout/dlgaddcomment.xml
@@ -33,7 +33,8 @@
         <Button
             android:id="@+id/btnCancel"
             style="?android:attr/buttonBarStyle"
-            android:layout_weight="0.5"
+            android:layout_margin="2dp"
+            android:layout_weight="0.4"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/lblCancel" />
@@ -41,7 +42,8 @@
         <Button
             android:id="@+id/btnOK"
             style="?android:attr/buttonBarStyle"
-            android:layout_weight="0.5"
+            android:layout_margin="2dp"
+            android:layout_weight="0.4"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/lblOK"
