--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -7,11 +7,11 @@
 
     <style name="MFBDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@color/custom_theme_color</item>
-        <item name="android:colorBackground">@color/custom_theme_color</item>
-        <item name="android:background">@color/custom_theme_color</item>
+        <item name="android:colorBackground">@color/colorDialog</item>
+        <item name="android:background">@color/colorDialog</item>
         <item name="android:textSize">14sp</item>
         <item name="android:padding">5sp</item>
-        <item name="android:textColor">#000000</item>
+        <item name="android:textColor">@color/textColorPrimary</item>
     </style>
 
     <style name="DividerBar">
