Minor updates:  - Fix color of checkbox in night mode  - Make divider colors sensitive to mode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorDialog">#bababa</color>
     <color name="colorMenu">#e8e8e8</color>
+    <color name="divider_background">#555555</color>
+    <color name="divider_text">#EEEEEE</color>
 </resources>
