--- a/app/src/main/res/layout/propertyedit.xml
+++ b/app/src/main/res/layout/propertyedit.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:labelFor="@+id/txtStringVal"
+            android:textColor="@color/textColorPrimary"
             android:text=""
             tools:ignore="LabelFor" />
 
@@ -67,7 +68,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
-            android:textColor="#000000"
+            android:textColor="@color/textColorPrimary"
             android:visibility="gone" />
     </LinearLayout>
 
