--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#4C6470</color>
+    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimaryDark">#00BCD4</color>
+    <color name="colorAccent">#00BCD4</color>
     <color name="textColorPrimary">#FFFFFF</color>
     <color name="colorBackground">#000000</color>
     <color name="colorDialog">#656565</color>
     <color name="colorMenu">#656565</color>
+    <color name="divider_background">#555555</color>
+    <color name="divider_text">#00BCD4</color>
 </resources>
